# erlguten

./: LICENSE  Makefile  README  erlguten  include.mk  rebar.config  vsn.mk
conf/: .gitignore  Makefile  configure.ac  include.mk.in
doc/: .gitignore  overview.edoc
ebin/: .gitignore
priv/: font_locations
priv/fonts/: README.txt
priv/fonts/gocm/: GOCMASE_.afm  GOCMASE_.pfm  GOCMSEQ_.INF  GOCM____.TXT
priv/fonts/ocr/: file_id.diz  ocrad___.afm  ocrad___.pfb  ocrad___.pfm  ocrbd___.afm  ocrbd___.pfb  ocrbd___.pfm  readme.txt
priv/fonts/vsecret/: README  V-SECRET.BMA  V-SECRET.afm  V-SECRET.pfb
priv/hyphenation/: README.txt  dk_merged.tex  hyph_da_DK.dic  hyph_en_GB.dic  hyph_fi_FI.dic  hyph_nb_NO.dic  hyph_sv_SE.dic  ukhyphen.tex
priv/hyphenation/original_tex/: nohyphbx.tex
priv/src/: .gitignore  README.txt
src/: .gitignore  Makefile  eg.hrl  eg_afm.erl  eg_convert.erl  eg_embed.erl  eg_font_server.erl  eg_hyphenate.erl  eg_lib.erl  eg_line_break.erl  eg_mk_hyphen.erl  eg_pdf.erl  eg_pdf_analyse.erl  eg_pdf_annot.erl  eg_pdf_assemble.erl  eg_pdf_image.erl  eg_pdf_lib.erl  eg_pdf_obj.erl  eg_pdf_op.erl  eg_pdf_page.erl  eg_richText.erl  eg_richText2pdf.erl  eg_xml2richText.erl  eg_xml_lite.erl  eg_xml_tokenise.erl  erlguten.app.src  erlguten.erl
test/: .gitignore  Makefile  content1.con  eg_test1.erl  eg_test2.erl  eg_test3.erl  eg_test4.erl  eg_test5.erl  eg_test6.erl  eg_test7.erl  erlguten  galley_001.gal  galley_002.gal  kd_test1.erl  template1.tem  template_001.tem  test1.map  test1.xml  test2.xml  tmo_doc.erl  tmo_doc.xml
(+6 files in other folders)
